[package]
name = "gui-portage"
version = "0.1.0"
edition = "2021"
description = "GUI Software Manager for Portage. Can be used on any other Gentoo Based Distros."

[[bin]]
name = "gui-portage"
path = "src/main.rs"

[features]
gentoolkit = []

[dependencies]
clap = "4.5.18"
glob = "0.3.1"
iced = "0.13.1"
sedregex = "0.2.5"
term = "1.0.0"
